# cyrillic_normalizer

./: .gitignore  README.md  pyproject.toml
cyrillic_normalizer/: homoglyphs.py
