[project]
name = "cyrillic-normalizer"
version = "0.1.0"
description = ""
authors = [
    {name = "sth-v",email = "sthv.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=2.7"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
